--- a/appstate.json
+++ b/appstate.json
@@ -1,39 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%2261556426205089%22%3A%22zQlIhU8j%22%2C%22100088865102476%22%3A%221Mul7u10%22%7D",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.728Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
-    },
-    {
-        "key": "datr",
-        "value": "9IGPZjc9iGOGXQtylfp_5eAK",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "sb",
-        "value": "9IGPZkLYJsOLmlzCa6vjvqL6",
+        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
+        "key": "datr",
+        "value": "KzuKZqw26dOgjgoJfnm_OFub",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "locale",
@@ -59,70 +50,88 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.7737884521484375",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B708x360x2.518298864364624",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "m_pixel_ratio",
-        "value": "1.500488042831421",
+        "value": "2.518298864364624",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "wd",
-        "value": "720x1329",
+        "value": "429x843",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "fr",
-        "value": "0VIP2xYvcwYexftBE.AWVxlYQoqbVSc62-LvAd0fYCXsQ.Bmj4H0..AAA.0.0.BmnQ1k.AWX6WRH-C0k",
+        "value": "18M6uZ6LTo58LMCnq.AWWLTAa24DJl1Xc79CUtuZx8H8g.Bmm-zX..AAA.0.0.BmnT1W.AWWJ79-sVZw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "c_user",
-        "value": "100088865102476",
+        "value": "61556426205089",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "xs",
-        "value": "41%3AETq7ili9hFZskA%3A2%3A1721568613%3A-1%3A13021",
+        "value": "49%3Ar8N_0SH3IVyH-g%3A2%3A1721580886%3A-1%3A14443",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "fbl_st",
-        "value": "101026902%3BT%3A28692810",
+        "value": "100720715%3BT%3A28693014",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2568%3Btimestamp%3A1721568616",
+        "value": "v2%3Bclient_version%3A2568%3Btimestamp%3A1721580888",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-21T13:30:27.729Z",
-        "lastAccessed": "2024-07-21T13:30:27.729Z"
+        "creation": "2024-07-21T16:54:57.979Z",
+        "lastAccessed": "2024-07-21T16:54:57.979Z"
     }
 ]
