--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%2261556426205089%22%3A%22zQlIhU8j%22%2C%22100088865102476%22%3A%221Mul7u10%22%2C%22100091806060471%22%3A%223gHUYXZG%22%7D",
+        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%2261556426205089%22%3A%22zQlIhU8j%22%2C%22100088865102476%22%3A%221Mul7u10%22%2C%22100091806060471%22%3A%22acc0ePDg%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.784Z",
+        "lastAccessed": "2024-07-22T06:58:41.784Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "wd",
@@ -68,17 +86,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "fr",
-        "value": "0VIP2xYvcwYexftBE.AWVeUKRH6Oi8Vn6GYVEarlPWJLk.Bmj4H0..AAA.0.0.Bmneo5.AWXaVIU_iz8",
+        "value": "0VIP2xYvcwYexftBE.AWXLTfBT13SUTQFfGpqwNuIH-Vw.Bmj4H0..AAA.0.0.BmngMC.AWX2j3ncxqY",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "c_user",
@@ -86,34 +104,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "xs",
-        "value": "42%3A0NWbSl2QbryVdA%3A2%3A1721625151%3A-1%3A13394",
+        "value": "46%3AXH2OEykKyB4dvQ%3A2%3A1721631490%3A-1%3A13394",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2569%3Btimestamp%3A1721630221",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     },
     {
         "key": "fbl_st",
-        "value": "101231964%3BT%3A28693854",
+        "value": "101220048%3BT%3A28693858",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-22T06:54:09.545Z",
-        "lastAccessed": "2024-07-22T06:54:09.545Z"
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2569%3Btimestamp%3A1721631494",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-22T06:58:41.785Z",
+        "lastAccessed": "2024-07-22T06:58:41.785Z"
     }
 ]
