--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%2261556426205089%22%3A%22zQlIhU8j%22%2C%22100088865102476%22%3A%221Mul7u10%22%2C%22100091806060471%22%3A%22acc0ePDg%22%7D",
+        "value": "%7B%2261551474205816%22%3A%22CVhlR0y0%22%2C%2261556426205089%22%3A%22zQlIhU8j%22%2C%22100091806060471%22%3A%22acc0ePDg%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "wd",
@@ -77,52 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "fr",
-        "value": "0VIP2xYvcwYexftBE.AWXLTfBT13SUTQFfGpqwNuIH-Vw.Bmj4H0..AAA.0.0.BmngMC.AWX2j3ncxqY",
+        "value": "0VIP2xYvcwYexftBE.AWWA46f2KIiVIfBQvoazg6lR3a8.Bmj4H0..AAA.0.0.Bmn1hK.AWVk9zGjzg4",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "c_user",
-        "value": "100091806060471",
+        "value": "100088865102476",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "xs",
-        "value": "46%3AXH2OEykKyB4dvQ%3A2%3A1721631490%3A-1%3A13394",
+        "value": "50%3A7gXj8NBWqpR71A%3A2%3A1721718863%3A-1%3A13021",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2569%3Btimestamp%3A1721717557",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     },
     {
         "key": "fbl_st",
-        "value": "100725861%3BT%3A28695292",
+        "value": "101022947%3BT%3A28695314",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-23T06:52:49.514Z",
-        "lastAccessed": "2024-07-23T06:52:49.514Z"
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2569%3Btimestamp%3A1721718866",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-23T07:14:36.701Z",
+        "lastAccessed": "2024-07-23T07:14:36.701Z"
     }
 ]
